--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tioanime",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "TioAnime API is a content provider of the latest in the world of anime with sub in Spanish and free, in addition to providing different complementary information. Using as a reference the websites tioanime.com and myanimelist.net, to extract the data and information.",
   "main": "./src/api.js",
   "scripts": {
@@ -8,7 +8,9 @@
   },
   "keywords": [
     "tioanime",
-    "tioanime api"
+    "tioanime api",
+    "anime",
+    "scraper"
   ],
   "author": "Carlos Fernández <carlosfdezb@gmail.com>",
   "contributors": [
