--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.3",
   "description": "TioAnime API is a content provider of the latest in the world of anime with sub in Spanish and free, in addition to providing different complementary information. Using as a reference the websites tioanime.com and myanimelist.net, to extract the data and information.",
   "main": "./src/api.js",
+  "types": "./types/api.d.ts",
   "scripts": {
     "dev": "nodemon src/api.js"
   },
@@ -25,7 +26,9 @@
     "nodemon": "^2.0.6",
     "request": "^2.88.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "typescript": "^2.9.2"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/carlosfdezb/tioanime.git"
